--- a/views/index.html
+++ b/views/index.html
@@ -72,7 +72,7 @@
     <div class="row">
       <div class="col-sm">
         <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="https://www.ktm.com/globalassets/products-pim-data/ke2-motorcycles/enduro/4-stroke/250-exc-f3/250-exc-f-2020/f8140t9/pho_bike_90_re.png" alt="Card image cap">
+            <img class="card-img-top" src="https://s3-ap-southeast-2.amazonaws.com/assets.i-motor.com.au/motorcycles/ktm/2019/large/ktm-450-sx-f-factory-edition.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title d-flex justify-content-center">KTM 250 EXC-F 2020</h5>
               <p class="card-text d-flex justify-content-center">R$ 25.000,00</p>
@@ -82,7 +82,7 @@
       </div>
       <div class="col-sm">
         <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="https://www.ktm.com/globalassets/products-pim-data/ke2-motorcycles/enduro/4-stroke/250-exc-f3/250-exc-f-2020/f8140t9/pho_bike_90_re.png" alt="Card image cap">
+            <img class="card-img-top" src="https://s3-ap-southeast-2.amazonaws.com/assets.i-motor.com.au/motorcycles/ktm/2019/large/ktm-450-sx-f-factory-edition.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title d-flex justify-content-center">KTM 250 EXC-F 2020</h5>
               <p class="card-text d-flex justify-content-center">R$ 25.000,00</p>
@@ -92,7 +92,7 @@
       </div>
       <div class="col-sm">
         <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="https://www.ktm.com/globalassets/products-pim-data/ke2-motorcycles/enduro/4-stroke/250-exc-f3/250-exc-f-2020/f8140t9/pho_bike_90_re.png" alt="Card image cap">
+            <img class="card-img-top" src="https://s3-ap-southeast-2.amazonaws.com/assets.i-motor.com.au/motorcycles/ktm/2019/large/ktm-450-sx-f-factory-edition.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title d-flex justify-content-center">KTM 250 EXC-F 2020</h5>
               <p class="card-text d-flex justify-content-center">R$ 25.000,00</p>
@@ -109,7 +109,7 @@
     <div class="row">
       <div class="col-sm">
         <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="https://www.ktm.com/globalassets/products-pim-data/ke2-motorcycles/enduro/4-stroke/250-exc-f3/250-exc-f-2020/f8140t9/pho_bike_90_re.png" alt="Card image cap">
+            <img class="card-img-top" src="https://s3-ap-southeast-2.amazonaws.com/assets.i-motor.com.au/motorcycles/ktm/2019/large/ktm-450-sx-f-factory-edition.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title d-flex justify-content-center">KTM 250 EXC-F 2020</h5>
               <p class="card-text d-flex justify-content-center">R$ 25.000,00</p>
@@ -119,7 +119,7 @@
       </div>
       <div class="col-sm">
         <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="https://www.ktm.com/globalassets/products-pim-data/ke2-motorcycles/enduro/4-stroke/250-exc-f3/250-exc-f-2020/f8140t9/pho_bike_90_re.png" alt="Card image cap">
+            <img class="card-img-top" src="https://s3-ap-southeast-2.amazonaws.com/assets.i-motor.com.au/motorcycles/ktm/2019/large/ktm-450-sx-f-factory-edition.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title d-flex justify-content-center">KTM 250 EXC-F 2020</h5>
               <p class="card-text d-flex justify-content-center">R$ 25.000,00</p>
@@ -129,7 +129,7 @@
       </div>
       <div class="col-sm">
         <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="https://www.ktm.com/globalassets/products-pim-data/ke2-motorcycles/enduro/4-stroke/250-exc-f3/250-exc-f-2020/f8140t9/pho_bike_90_re.png" alt="Card image cap">
+            <img class="card-img-top" src="https://s3-ap-southeast-2.amazonaws.com/assets.i-motor.com.au/motorcycles/ktm/2019/large/ktm-450-sx-f-factory-edition.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title d-flex justify-content-center">KTM 250 EXC-F 2020</h5>
               <p class="card-text d-flex justify-content-center">R$ 25.000,00</p>
