--- a/views/product.html
+++ b/views/product.html
@@ -13,7 +13,7 @@
 
   <input type="hidden" name="productId" id="productId" value="" />
   <p class="p-3 d-flex justify-content-center">
-    <img src="https://www.ktm.com/globalassets/products-pim-data/ke2-motorcycles/enduro/4-stroke/250-exc-f3/250-exc-f-2020/f8140t9/pho_bike_90_re.png" width="50%" alt="">
+    <img src="https://s3-ap-southeast-2.amazonaws.com/assets.i-motor.com.au/motorcycles/ktm/2019/large/ktm-450-sx-f-factory-edition.jpg" width="50%" alt="">
   </p>
   <hr />
   <a href="/carrinho" class="btn btn-success d-flex justify-content-center">Adicionar ao carrinho</a>
